--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@ h1 {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-div {
+div.index {
     margin: auto;
     width: 200px;
     height: 85px;
@@ -17,8 +17,13 @@ div {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+div.tag {
+    background-color: honeydew;
+    text-align: center;
+}
+
 img {
-    width: 50%;
+    width: 35%;
     display: block;
     margin-left: auto;
     margin-right: auto;
